fix: align icons

--- a/src/assets/icons/icons.css
+++ b/src/assets/icons/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'Wheels';
-  src:  url('fonts/Wheels.eot?gdxm7k');
-  src:  url('fonts/Wheels.eot?gdxm7k#iefix') format('embedded-opentype'),
-    url('fonts/Wheels.ttf?gdxm7k') format('truetype'),
-    url('fonts/Wheels.woff?gdxm7k') format('woff'),
-    url('fonts/Wheels.svg?gdxm7k#Wheels') format('svg');
+  src:  url('fonts/Wheels.eot?dxj22x');
+  src:  url('fonts/Wheels.eot?dxj22x#iefix') format('embedded-opentype'),
+    url('fonts/Wheels.ttf?dxj22x') format('truetype'),
+    url('fonts/Wheels.woff?dxj22x') format('woff'),
+    url('fonts/Wheels.svg?dxj22x#Wheels') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
